# spsu-mm-se-programming

./: .gitignore  CMakeLists.txt  Task1.c
1 Semester/1 Homework/: Task 1 (Mersenne numbers)
1 semester/Homework 1/: Task1.c  Task2.c  Task3.c
AlexanderKharitonov/Second/: CMakeLists.txt  number_representations.c
ArianBagheri/Block1_task1/: Block1_task1.c  Block1_task1.vcxproj
ArianBagheri/Block1_task2/: Block1_task2.c  Block1_task2.vcxproj
ArianBagheri/Block1_task3/: Block1_task3.c  Block1_task3.vcxproj
ArianBagheri/Block1_task4/: Block1_task4.c  Block1_task4.vcxproj
ArianBagheriNezhad/Block1_task1/: Block1_task1.c  Block1_task1.sln  Block1_task1.vcxproj
ArianBagheriNezhad/Block1_task2/: Block1_task2.c  Block1_task2.sln  Block1_task2.vcxproj
ArianBagheriNezhad/Block1_task3/: Block1_task3.c  Block1_task3.sln
ArianBagheriNezhad/Block1_task4/: Block1_task4.sln  Block1_task4.vcxproj
ArianBagheriNezhad/Block2_task1/: Block2_task1.sln
ArianBagheriNezhad/Block2_task2/: Block2_task2.sln
Block1_task3/: Block1_task3.vcxproj
Block1_task4/: Block1_task4.c
First term/: 1. Язык С - начало.pptx  2. Указатели в языке С.pptx  Codestyle.txt  HardMode2.docx  Success Stories.txt  Success stories.txt  Основы работы с системой контроля версий Git.docx  Практикум на ЭВМ 09.11.2021.pptx  Практикум на ЭВМ 16.11.2021.pptx
Ilya-Dudnikov/term_1/block_3/task_1/: CMakeLists.txt  main.h
Ilya-Pankratov/: .gitignore
IvanShurenkov/: .gitignore
IvanShurenkov/Block3/Task1/: CMakeLists.txt  main.c
IvanShurenkov/Block4/Task1/: CMakeLists.txt  big_integer.c  big_integer.h  main.c
Second term/: Codestyle.txt
Task01/: main.c
Task1.1/: task1.1.sln
block1_tack1/: block1_task1.c  block1_task1.vcxproj
(+7419 files in other folders)
